// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemiBoldText Component renders correctly with custom font size 1`] = `
<Text
  fontSize={18}
  style={
    {
      "fontFamily": "SemiBold",
      "fontSize": 27,
    }
  }
>
  Custom Font Size
</Text>
`;

exports[`SemiBoldText Component renders correctly with default props 1`] = `
<Text
  style={
    {
      "fontFamily": "SemiBold",
      "fontSize": 21,
    }
  }
>
  Hello, World!
</Text>
`;
